// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/steps/demo/basic.md correctly 1`] = `
<div
  class="am-wingblank am-wingblank-lg"
>
  <div
    class="sub-title"
  >
    小尺寸
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div
    class="am-steps am-steps-small am-steps-vertical am-steps-hidden"
  >
    <div
      class="am-steps-item am-steps-status-finish am-steps-custom"
    >
      <div
        class="am-steps-tail"
      >
        <i />
      </div>
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-check-circle-o am-icon-md"
              >
                <use
                  xlink:href="#check-circle-o"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            已完成
          </div>
          <div
            class="am-steps-description"
          >
            这里是信息的描述
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-steps-item am-steps-status-process"
    >
      <div
        class="am-steps-tail"
      >
        <i />
      </div>
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            进行中
          </div>
          <div
            class="am-steps-description"
          >
            这里是信息的描述
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-steps-item am-steps-item-last am-steps-status-wait am-steps-custom ellipsis-item"
    >
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-ellipsis am-icon-md"
              >
                <use
                  xlink:href="#ellipsis"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            待运行
          </div>
          <div
            class="am-steps-description"
          >
            这里是信息的描述
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sub-title"
  >
    小尺寸, 单行文字流程
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div
    class="am-steps am-steps-small am-steps-vertical am-steps-hidden"
  >
    <div
      class="am-steps-item am-steps-status-finish am-steps-custom"
    >
      <div
        class="am-steps-tail"
      >
        <i />
      </div>
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-check-circle-o am-icon-md"
              >
                <use
                  xlink:href="#check-circle-o"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            已完成
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-steps-item am-steps-status-process"
    >
      <div
        class="am-steps-tail"
      >
        <i />
      </div>
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            进行中
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-steps-item am-steps-item-last am-steps-status-wait am-steps-custom ellipsis-item"
    >
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-ellipsis am-icon-md"
              >
                <use
                  xlink:href="#ellipsis"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            待运行
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sub-title"
  >
    正常尺寸
  </div>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <div
    class="am-steps am-steps-vertical am-steps-hidden"
  >
    <div
      class="am-steps-item am-steps-status-process error-tail"
    >
      <div
        class="am-steps-tail"
      >
        <i />
      </div>
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              1
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            已完成
          </div>
          <div
            class="am-steps-description"
          >
            这里是信息的描述
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-steps-item am-steps-status-error am-steps-custom ellipsis-item"
    >
      <div
        class="am-steps-tail"
      >
        <i />
      </div>
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-cross-circle-o am-icon-md"
              >
                <use
                  xlink:href="#cross-circle-o"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            出错
          </div>
          <div
            class="am-steps-description"
          >
            这里是信息的描述
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-steps-item am-steps-item-last am-steps-status-wait am-steps-custom ellipsis-item"
    >
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-ellipsis am-icon-md"
              >
                <use
                  xlink:href="#ellipsis"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            待运行
          </div>
          <div
            class="am-steps-description"
          >
            这里是信息的描述
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sub-title"
  >
    自定义 status 
  </div>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <div
    class="am-steps am-steps-vertical am-steps-hidden"
  >
    <div
      class="am-steps-item am-steps-status-finish am-steps-custom"
    >
      <div
        class="am-steps-tail"
      >
        <i />
      </div>
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-[object Object] am-icon-md"
              >
                <use
                  xlink:href="#[object Object]"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            步骤1
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-steps-item am-steps-status-process am-steps-custom error-tail"
    >
      <div
        class="am-steps-tail"
      >
        <i />
      </div>
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-[object Object] am-icon-md"
              >
                <use
                  xlink:href="#[object Object]"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            步骤2
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-steps-item am-steps-item-last am-steps-status-error am-steps-custom"
    >
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-[object Object] am-icon-md"
              >
                <use
                  xlink:href="#[object Object]"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            步骤3
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sub-title"
  >
    自定义 icon 
  </div>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <div
    class="am-steps am-steps-vertical am-steps-hidden"
  >
    <div
      class="am-steps-item am-steps-status-finish am-steps-custom"
    >
      <div
        class="am-steps-tail"
      >
        <i />
      </div>
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-[object Object] am-icon-md"
              >
                <use
                  xlink:href="#[object Object]"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            步骤1
          </div>
          <div
            class="am-steps-description"
          >
            这里是信息的描述
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-steps-item am-steps-status-process am-steps-custom"
    >
      <div
        class="am-steps-tail"
      >
        <i />
      </div>
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-[object Object] am-icon-md"
              >
                <use
                  xlink:href="#[object Object]"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            步骤2
          </div>
          <div
            class="am-steps-description"
          >
            这里是信息的描述
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-steps-item am-steps-item-last am-steps-status-wait am-steps-custom"
    >
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-[object Object] am-icon-md"
              >
                <use
                  xlink:href="#[object Object]"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            步骤3
          </div>
          <div
            class="am-steps-description"
          >
            这里是信息的描述
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sub-title"
  >
    多 steps 
  </div>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <div
    class="am-steps am-steps-vertical am-steps-hidden"
  >
    <div
      class="am-steps-item am-steps-status-finish am-steps-custom"
    >
      <div
        class="am-steps-tail"
      >
        <i />
      </div>
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-[object Object] am-icon-md"
              >
                <use
                  xlink:href="#[object Object]"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            步骤1
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-steps-item am-steps-status-process am-steps-custom error-tail"
    >
      <div
        class="am-steps-tail"
      >
        <i />
      </div>
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-[object Object] am-icon-md"
              >
                <use
                  xlink:href="#[object Object]"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            步骤2
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-steps-item am-steps-status-error am-steps-custom"
    >
      <div
        class="am-steps-tail"
      >
        <i />
      </div>
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-[object Object] am-icon-md"
              >
                <use
                  xlink:href="#[object Object]"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            步骤3
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-steps-item am-steps-item-last am-steps-status-wait am-steps-custom"
    >
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-[object Object] am-icon-md"
              >
                <use
                  xlink:href="#[object Object]"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            步骤4
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/horizontal.md correctly 1`] = `
<div
  class="am-wingblank am-wingblank-lg stepsExample"
>
  <div
    class="sub-title"
  >
    水平小尺寸
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div
    class="am-steps am-steps-small am-steps-horizontal am-steps-label-vertical am-steps-hidden"
  >
    <div
      class="am-steps-item am-steps-status-finish am-steps-custom"
      style="margin-right:-1px;"
    >
      <div
        class="am-steps-tail"
      >
        <i />
      </div>
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-check-circle-o am-icon-md"
              >
                <use
                  xlink:href="#check-circle-o"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            已完成
          </div>
          <div
            class="am-steps-description"
          >
            这里是信息的描述
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-steps-item am-steps-status-process"
      style="margin-right:-1px;"
    >
      <div
        class="am-steps-tail"
      >
        <i />
      </div>
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            进行中
          </div>
          <div
            class="am-steps-description"
          >
            这里是信息的描述
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-steps-item am-steps-item-last am-steps-status-wait am-steps-custom ellipsis-item"
    >
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-ellipsis am-icon-md"
              >
                <use
                  xlink:href="#ellipsis"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            待运行
          </div>
          <div
            class="am-steps-description"
          >
            这里是信息的描述
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sub-title"
  >
    水平正常尺寸
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div
    class="am-steps am-steps-horizontal am-steps-label-vertical am-steps-hidden"
  >
    <div
      class="am-steps-item am-steps-status-finish am-steps-custom"
      style="margin-right:-1px;"
    >
      <div
        class="am-steps-tail"
      >
        <i />
      </div>
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-check-circle-o am-icon-md"
              >
                <use
                  xlink:href="#check-circle-o"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            已完成
          </div>
          <div
            class="am-steps-description"
          >
            这里是信息的描述
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-steps-item am-steps-status-process"
      style="margin-right:-1px;"
    >
      <div
        class="am-steps-tail"
      >
        <i />
      </div>
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            进行中
          </div>
          <div
            class="am-steps-description"
          >
            这里是信息的描述
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-steps-item am-steps-item-last am-steps-status-wait am-steps-custom ellipsis-item"
    >
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-ellipsis am-icon-md"
              >
                <use
                  xlink:href="#ellipsis"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            待运行
          </div>
          <div
            class="am-steps-description"
          >
            这里是信息的描述
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sub-title"
  >
    水平自定义icon
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div
    class="am-steps am-steps-horizontal am-steps-label-vertical am-steps-hidden"
  >
    <div
      class="am-steps-item am-steps-status-process am-steps-custom error-tail"
      style="margin-right:-1px;"
    >
      <div
        class="am-steps-tail"
      >
        <i />
      </div>
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-[object Object] am-icon-md"
              >
                <use
                  xlink:href="#[object Object]"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            步骤1
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-steps-item am-steps-status-error am-steps-custom"
      style="margin-right:-1px;"
    >
      <div
        class="am-steps-tail"
      >
        <i />
      </div>
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-[object Object] am-icon-md"
              >
                <use
                  xlink:href="#[object Object]"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            步骤2
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-steps-item am-steps-item-last am-steps-status-wait am-steps-custom"
    >
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <svg
                class="am-icon am-icon-[object Object] am-icon-md"
              >
                <use
                  xlink:href="#[object Object]"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            步骤3
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sub-title"
  >
    水平 timeline 模式
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div
    class="am-steps am-steps-small am-steps-horizontal am-steps-label-vertical am-steps-hidden timeline"
  >
    <div
      class="am-steps-item am-steps-status-wait am-steps-custom"
      style="margin-right:-1px;"
    >
      <div
        class="am-steps-tail"
      >
        <i />
      </div>
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <span
                class="fake-icon"
              />
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            现在
          </div>
          <div
            class="am-steps-description"
          >
            立即买入
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-steps-item am-steps-status-wait am-steps-custom"
      style="margin-right:-1px;"
    >
      <div
        class="am-steps-tail"
      >
        <i />
      </div>
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <span
                class="fake-icon"
              />
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            11月3日
          </div>
          <div
            class="am-steps-description"
          >
            买入成功
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-steps-item am-steps-item-last am-steps-status-wait am-steps-custom"
    >
      <div
        class="am-steps-step"
      >
        <div
          class="am-steps-head"
        >
          <div
            class="am-steps-head-inner"
          >
            <span
              class="am-steps-icon"
            >
              <span
                class="fake-icon"
              />
            </span>
          </div>
        </div>
        <div
          class="am-steps-main"
        >
          <div
            class="am-steps-title"
          >
            11月4日
          </div>
          <div
            class="am-steps-description"
          >
            收益到账
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
